test/compile-fail/find-file/no-module-single/expected.txt
error: couldn't read ./test/compile-fail/find-file/no-module-single/a.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-single/top.rhdl:1:1
  │
1 │ mod a;
  │ ^^^^^^ declared here

